--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           aws-region: us-east-1  # Thay bằng region của bạn
 
       - name: Deploy to S3
-        run: aws s3 sync ./ s3://aws-wowcns  
+        run: aws s3 sync ./ s3://aws-wowcns/wowcns-web-new
